# fluffi

./: .editorconfig  CMakeLists.txt  getting_started.md  usage.md
srv/fluffi/data/mon/: FLUFFIboard1.json  FLUFFIboard2.json
srv/fluffi/data/polenext/projects/1/: initialSetup.yml
